Fix bug phần hero-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@ a {
 .hero-wrap {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     position: relative;
     background-color: #e6f0ff;
     min-height: calc(100vh - 90px);
@@ -114,15 +115,11 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .subtitle {
+.hero-wrap .subtitle {
     color: #687690;
     font-size: 1.8rem;
     font-weight: 500;
@@ -130,7 +127,7 @@ a {
     letter-spacing: 0.01em;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 8px;
     font-size: 6.2rem;
     font-weight: 700;
@@ -138,7 +135,7 @@ a {
     color: #000336;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     margin: 3rem 0.9rem 0 0;
     color: #5a6473;
     font-size: 1.8rem;
@@ -146,7 +143,7 @@ a {
     line-height: 1.78;
 }
 
-.hero .cta {
+.hero-wrap .cta {
     min-width: 170px;
     margin-top: 40px;
 }
